[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-websocket-sync"
version = "1.0.0"
description = "Real-time client collaborative server synchronization library using WebSockets."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
